# types-noodles

./: .gitignore  README.md  README.rst  pyproject.toml  setup.py
noodles-stubs/: __init__.pyi  config.pyi  pilot_job.pyi  tutorial.pyi
noodles-stubs/display/: __init__.pyi  dumb_term.pyi  lines.pyi  pretty.pyi  pretty_term.pyi  simple.pyi  simple_nc.pyi  termapp.pyi
noodles-stubs/draw_workflow/: __init__.pyi  draw_workflow.pyi
noodles-stubs/interface/: __init__.pyi  decorator.pyi  functions.pyi  maybe.pyi
noodles-stubs/lib/: __init__.pyi  connection.pyi  coroutine.pyi  decorator.pyi  queue.pyi  streams.pyi  thread_pool.pyi  utility.pyi
noodles-stubs/patterns/: __init__.pyi  control_flow_statements.pyi  find_first.pyi  functional_patterns.pyi
noodles-stubs/prov/: __init__.pyi  key.pyi  sqlite.pyi  workflow.pyi
noodles-stubs/run/: config.pyi  hybrid.pyi  job_keeper.pyi  logging.pyi  messages.pyi  process.pyi  runners.pyi  scheduler.pyi  worker.pyi
noodles-stubs/run/remote/: io.pyi  worker_config.pyi
noodles-stubs/run/single/: sqlite3.pyi  vanilla.pyi
noodles-stubs/run/threading/: sqlite3.pyi  vanilla.pyi
noodles-stubs/run/xenon/: __init__.pyi  dynamic_pool.pyi  runner.pyi  xenon.pyi
noodles-stubs/serial/: __init__.pyi  as_dict.pyi  base.pyi  dataclass.pyi  namedtuple.pyi  numpy.pyi  path.pyi  pickle.pyi  reasonable.pyi  registry.pyi
noodles-stubs/workflow/: __init__.pyi  arguments.pyi  create.pyi  graphs.pyi  model.pyi  mutations.pyi
